--- a/src/components/MainBox/Slider.css
+++ b/src/components/MainBox/Slider.css
@@ -50,7 +50,7 @@
       right: 0;
       margin-left: auto;
       margin-right: auto;
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       will-change: opacity;
