--- a/src/components/MainBox/Offers.css
+++ b/src/components/MainBox/Offers.css
@@ -7,6 +7,7 @@
 .gallery-text {
   margin: 80px auto;
   background: linear-gradient(to top, #ffefba, #ffffff);
+  width: 96%;
   font-size: 25px;
   font-family: 'Playfair Display SC', serif;
 }
