--- a/src/BookingForm/BookingForm.css
+++ b/src/BookingForm/BookingForm.css
@@ -12,7 +12,7 @@
 }
 
 .BookingForm {
-    background-color:#1c92d2;
+    background-color: oldlace;
     width: 450px;
     height: 420px;
     margin: 0 auto;
