--- a/src/components/Body/MainCards/MainList.css
+++ b/src/components/Body/MainCards/MainList.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200&display=swap');
+.style{
+  font-family: 'Libre Franklin', sans-serif;
+}
 .grid_container{
   width: 80% !important;
   max-width: 1080px !important;
