--- a/src/components/MainBox/Slider.css
+++ b/src/components/MainBox/Slider.css
@@ -49,7 +49,7 @@
       left: 0;
       right: 0;
       margin-left: auto;
-      margin-top: 80px;
+      /* margin-top: 80px; */
       margin-right: auto;
       background-size: cover;
       background-repeat: no-repeat;
