--- a/src/components/Footer/FooterNew.css
+++ b/src/components/Footer/FooterNew.css
@@ -49,7 +49,7 @@
   width: 100%;
   max-width: 1000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 
 }
 
@@ -60,9 +60,10 @@
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
+
   margin: 16px;
-  text-align: left;
+  text-align: center;
   width: 200px;
   box-sizing: border-box;
 }
@@ -149,4 +150,14 @@
       flex-direction: column;
   }
   
+}
+
+@media all and (max-width: 500px ){
+  .footer-links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+  }
 }
