final version team-hackathon

--- a/src/components/Footer/FooterNew.css
+++ b/src/components/Footer/FooterNew.css
@@ -1,6 +1,5 @@
 .footer-container {
-  background: linear-gradient(to right, #6190e8, #a7bfe8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* padding: 4rem 0 2rem 0; */
+  background: #3791c6;
   display: flex;
   flex-direction: column;
   justify-content: center;
