--- a/src/components/Footer/FooterNew.css
+++ b/src/components/Footer/FooterNew.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background: #3791c6;
+  background: #a8c0ff;
   display: flex;
   flex-direction: column;
   justify-content: center;
